    - add month_value_format attribute to html_select_date
      plugin (Gary Loescher, Monte) 
    - made it possible to use simple variables inside [] for
      indexing. (Andrei)
    - added "once" attribute to {include_php}. (Monte)

Version 2.1.1
-------------
    - added cycle function. (Monte)
    - fixed bug with resource testing, and include_path. (Monte)
    - fixed a bug with register_outputfilter function. (Monte)

Version 2.1.0
-------------

    - introduced output filters. (Andrei)
    - changed the way filters are loaded, added load_filter()
      API function and $autoload_filters variable. (Andrei)
    - added caching logic for expire times per cache file
      (Norbert Rocher, Monte)
    - fixed html_select_date when field separator is "/"
      (Roberto Berto, Monte)
    - added YYYY-MM-DD format support to html_select_date
      (Jan Rosier, Monte)
    - fixed cache_lifetime logic bug, also made -1 = never
      expire (Monte)
    - fixed directory separator issue for Windows. (Andrei)
    - added ability to use simple variables as array indices or
      object properties. (Andrei)
    - added ability to unregister pre/postfilters plugins at
      runtime. (Andrei)
    - added 'htmlall' attribute to escape modifier. (Monte)
    - added template_exists() API function. (Andrei)
    - fixed a problem with using dynamic values for 'file'
      attribute of {include_php} tag. (Andrei)
    - added $smarty.template variable. (Andrei)
    - fixed several plugins that would not work if the plugin
      directory was not the default one. (Andrei)
    - implemented support for block functions. (Andrei)
    - made it possible to assign variables in pre/postfilter
      plugins. (Andrei)

Version 2.0.1
-------------
    - rename plugin .make_timestamp.php to shared.make_timestamp.php.
      (Monte)
    - changed crc32() generated values, replace '-' with 'N'. (Monte)
    - added support for +/- N syntax in html_select_date year values.
      (Monte)