@@ -400,7 +400,7 @@ href="mailto:%62%6f%62%40%6d%65%2e%6e%65%74"&gt;&amp;#x62;&amp;#x6f;&amp;#x62;&a
 	<para>
 	Smarty's homepage is located at http://www.phpinsider.com/php/code/Smarty/.
 	You can join the mailing list by sending an e-mail to
-	subscribe-smarty@lists.ispi.net. An archive of the mailing list can be
+	smarty-general-subscribe@lists.php.net. An archive of the mailing list can be
 	viewed at http://marc.theaimsgroup.com/?l=smarty&amp;r=1&amp;w=2
 	</para>
 </chapter>
